fix (all style files) scroll fixed on smaller devices
- scrolling is now enabled on smaller devices

--- a/contact-style.css
+++ b/contact-style.css
@@ -151,6 +151,10 @@ footer {
 }
 
 @media (max-width: 600px) {
+    body {
+        overflow-y: scroll;
+    }
+
     .main-content {
         margin-left: 10px;
     }
