--- a/index-style.css
+++ b/index-style.css
@@ -216,6 +216,10 @@ footer p {
 }
 
 @media (max-width: 600px) {
+    body {
+        overflow-y: scroll;
+    }
+
     .main-content {
         margin-left: 10px;
     }
